🐛 Fix cut off format toggle on filtered pages.

--- a/frontend/scss/components/organisms/_sidebar.scss
+++ b/frontend/scss/components/organisms/_sidebar.scss
@@ -7,8 +7,6 @@
 @import 'components/atoms/_text.scss';
 
 @mixin sidebar {
-  
-
 
   @media (min-width: 768px) {
     position: -webkit-sticky;
@@ -16,8 +14,9 @@
     z-index: 1;
     top: 118px;
     left: auto;
-    padding-bottom: 0;
     width: auto;
+    min-height: 400px;
+    padding-bottom: 0;
     margin-right: 0;
     margin-left: -10px;
     background: none;
@@ -33,9 +32,9 @@
   margin: 15px 0 0;
   padding-bottom: 15px;
 
-  
 
-  
+
+
 }
 
 @mixin sidebar-nav-list {
